<resources>
    <string name="app_name">Job Seeker</string>
    <string name="todo">TODO</string>
    <string name="job_seeker">Job Seeker</string>
    <string name="todo_2">TODO</string>
    <string name="todo_3">TODO</string>
    <string name="temukan_pekerjaan_impian_anda_disini">Temukan</string>
    <string name="temukan_pekerjaan_impian_anda_disini_2">Pekerjaan Impian</string>
    <string name="temukan_pekerjaan_impian_anda_disini_3">Anda Disini!</string>
    <string name="text_description">Jelajahi semua peran pekerjaan paling menarik berdasarkan minat dan jurusan studi Anda.</string>
    <string name="todo_4">TODO</string>
    <string name="kami_senang_melihat_anda_kembali_lagi">Kami senang melihat Anda kembali lagi!</string>
    <string name="email">Email</string>
    <string name="masukkan_email_anda">Masukkan Email Anda</string>
    <string name="masukkan_password_anda">Masukkan Password Anda</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Kata Sandi ?</string>
    <string name="login">LOGIN</string>
    <string name="sign_in_with_google">SIGN IN WITH GOOGLE</string>
    <string name="anda_belum_memiliki_akun">Anda belum memiliki akun?</string>
    <string name="sign_up">Sign up</string>
    <string name="kemudahan_mencari_pekerjaan_hanya_di_job_seeker">Kemudahan mencari pekerjaan hanya di Job Seeker</string>
    <string name="full_name">Full name</string>
    <string name="masukkan_nama_anda">Masukkan Nama Anda</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sudah_memiliki_akun">Sudah memiliki akun?</string>
    <string name="sign_in_2">Sign in</string>
    <string name="sign_up_2">SIGN UP</string>
    <string name="sign_up_with_google">SIGN UP WITH GOOGLE</string>
    <string name="todo_5">TODO</string>
    <string name="lupa_password_2">Lupa Kata Sandi?</string>
    <string name="untuk_mengatur_ulang_kata_sandi_Anda_memerlukan_email_yang_dapat_diautentikasi">Untuk mengatur ulang kata sandi, Anda memerlukan email yang dapat diautentikasi</string>
    <string name="todo_6">TODO</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="back_to_login">BACK TO LOGIN</string>
    <string name="check_your_email">Periksa Email Anda!</string>
    <string name="pesan_check_your_email">Reset password telah kami kirimkan ke alamat email</string>
    <string name="open_your_email">OPEN YOUR EMAIL</string>
    <string name="todo_7">TODO</string>
    <string name="pesan_check_your_email_2">Anda belum menerima email?</string>
    <string name="kirim_ulang">Kirim Ulang</string>
    <string name="todo_8">TODO</string>
    <string name="selamat_datang">Selamat Datang!</string>
    <string name="buat_akun_baru_yuk">Buat Akun Baru Yuk!</string>
    <string name="ingatkan_aku">Ingatkan aku!</string>
    <string name="todo_9">TODO</string>
    <string name="todo_10">TODO</string>
    <string name="todo_11">TODO</string>
    <string name="your_account_is_ready_to_use">Your account is ready to use</string>
    <string name="go_to_homepage">GO TO HOMEPAGE</string>
    <string name="berhasil">Berhasil!</string>
    <string name="kata_sandi_anda_telah_diperbarui_harap_ubah_kata_sandi_anda_secara_berkala_untuk_menghindari_hal_ini_terjadi">Kata sandi Anda telah diperbarui, harap ubah kata sandi Anda secara berkala untuk menghindari hal ini terjadi</string>
    <string name="lanjut">CONTINUE</string>
    <string name="todo_12">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to">Welcome to</string>
    <string name="jobs">Jobs</string>
    <string name="todo_13">TODO</string>
    <string name="profile">Profile</string>
    <string name="menu_titik">...</string>
    <string name="example_name_user">Siti Nur Layla</string>
    <string name="example_job_user">UX Designer</string>
    <string name="example_email_address_user">sitinurlayla@gmail.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="resume">Resume</string>
    <string name="portofolio">Portofolio</string>
    <string name="sertifikasi">Sertifikasi</string>
    <string name="example_apk_version">Versi Beta</string>
    <string name="kebijakan_privasi">Kebijakan privasi</string>
    <string name="syarat_ketentuan"><![CDATA[Syarat & ketentuan]]></string>
    <string name="edit_profile_2">Edit Profile</string>
    <string name="todo_14">TODO</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="masukkan_nomor_telepon_anda">Masukkan Nomor Telepon Anda</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="alamat">Alamat</string>
    <string name="masukkan_alamat_anda">Masukkan Alamat Anda</string>
    <string name="masukkan_pekerjaan_anda">Masukkan Pekerjaan Anda</string>
    <string name="simpan">SIMPAN</string>
    <string name="settings">Settings</string>
    <string name="hubungi_kami">Hubungi Kami</string>
    <string name="rate_job_seeker">Rate Job Seeker</string>
    <string name="todo_15">TODO</string>
    <string name="todo_16">TODO</string>
    <string name="ubah_bahasa">Ubah Bahasa</string>
    <string name="keluar">Keluar</string>
    <string name="hapus_akun">Hapus Akun</string>
    <string name="full_time">Full Time</string>
    <string name="jakarta_indonesia">Jakarta, Indonesia</string>
    <string name="todo_17">TODO</string>
    <string name="todo_18">TODO</string>
    <string name="idr_6_000_000_8_000_000_bulan">IDR 6.000.000 - 8.000.000 / bulan</string>
    <string name="todo_20">TODO</string>
    <string name="todo_21">TODO</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="todo_22">TODO</string>
    <string name="todo_25">TODO</string>
    <string name="default_web_client_id" />
    <string name="on_submit_msg">Periksa mailbox Anda, Anda akan menerima email yang berisi tautan di mana Anda dapat mengatur ulang kata sandi Anda</string>
    <string name="menu_ini_sedang_dalam_pengembangan_mohon_untuk_coba_lagi_nanti">Menu ini sedang dalam pengembangan, mohon untuk coba lagi nanti</string>
    <string name="todo_23">TODO</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="data_tidak_tersedia">Data tidak tersedia</string>
    <string name="pekerjaan_tersimpan">Pekerjaan Tersimpan</string>
    <string name="nama_pekerjaan">Nama Pekerjaan</string>
    <string name="lokasi">lokasi</string>
    <string name="nama_perusahaan">Nama Perusahaan</string>
    <string name="jumlah_karyawan">Jumlah Karyawan</string>
    <string name="gaji">gaji</string>
    <string name="deskripsi_pekerjaan">Deskripsi Pekerjaan</string>
    <string name="benefit">Benefit</string>
    <string name="persyaratan_pekerjaan">Persyaratan Pekerjaan</string>
</resources>